--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,13 @@ jobs:
       - name: Install zip
         run: sudo apt-get install zip -y
 
-      - name: Get short commit hash
-        id: get_hash
-        run: echo "hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+      - name: Get version metadata (date + commit hash)
+        id: version
+        run: |
+          DATE=$(date +%Y%m%d)
+          HASH=$(git rev-parse --short HEAD)
+          VERSION="v${DATE}-${HASH}"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Run build script
         run: |
@@ -37,14 +41,14 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git tag -a "v${{ steps.get_hash.outputs.hash }}" -m "Automated release for commit ${{ steps.get_hash.outputs.hash }}"
-          git push origin "v${{ steps.get_hash.outputs.hash }}"
+          git tag -a "${{ steps.version.outputs.version }}" -m "Automated release for ${{ steps.version.outputs.version }}"
+          git push origin "${{ steps.version.outputs.version }}"
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_hash.outputs.hash }}
-          name: "Release v${{ steps.get_hash.outputs.hash }}"
+          tag_name: ${{ steps.version.outputs.version }}
+          name: "Release ${{ steps.version.outputs.version }}"
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -52,7 +56,7 @@ jobs:
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_hash.outputs.hash }}
+          tag_name: ${{ steps.version.outputs.version }}
           files: bin/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
