--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for tags
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -24,12 +26,20 @@ jobs:
       - name: Install zip
         run: sudo apt-get install zip -y
 
-      - name: Get version metadata (date + commit hash)
+      - name: Get version metadata (timestamp + commit hash)
         id: version
         run: |
-          DATE=$(date +%Y%m%d)
+          # Option 1: Date + Time + Short Hash (always unique)
+          TIMESTAMP=$(date +%Y%m%d-%H%M%S)
           HASH=$(git rev-parse --short HEAD)
-          VERSION="v${DATE}-${HASH}"
+          VERSION="v${TIMESTAMP}-${HASH}"
+          
+          # Option 2: Date + Hash + Build Number (if re-runs needed)
+          # DATE=$(date +%Y%m%d)
+          # HASH=$(git rev-parse --short HEAD)
+          # BUILD_NUM=${{ github.run_number }}
+          # VERSION="v${DATE}-${HASH}-build${BUILD_NUM}"
+          
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Run build script
@@ -50,6 +60,15 @@ jobs:
           tag_name: ${{ steps.version.outputs.version }}
           name: "Release ${{ steps.version.outputs.version }}"
           generate_release_notes: true
+          body: |
+            ## Automated Release
+            
+            **Commit:** ${{ github.sha }}
+            **Branch:** master
+            **Build:** ${{ github.run_number }}
+            
+            ### Changes
+            See generated release notes below.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
