--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,18 +11,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: '1.23'
 
-      - name: Get Build DEPENDENCIES
-        run: go get ./...
+      - name: Clone NTrace-core
+        run: |
+          rm -rf lib/NTrace-core
+          git clone --depth 1 https://github.com/netwatcherio/NTrace-core.git lib/NTrace-core
+
+      - name: Get Build Dependencies
+        run: go mod tidy
 
       - name: Build
-        run: go build -v ./...
+        run: CGO_ENABLED=0 go build -v ./...
 
       - name: Test
         run: go test -v ./...
